# chromatin

./: CMakeLists.txt  Doxyfile  README.md
include/: CMakeLists.txt  MTexample.cpp  XYEigen.cpp  XYEigen.h  XYFile.cpp  XYFile.h  XYLapack.cpp  XYLapack.h  XYMath.cpp  XYMath.h  XYMath.inl  XYMatrix.h  XYMatrix.inl  XYPDB.cpp  XYPDB.h  XYPDBAtom.cpp  XYPDBAtom.h  XYPoint3D.h  XYPoint3D.inl  XYSO3Sequence.cpp  XYSO3Sequence.h  XYUtility.cpp  XYUtility.h  XYVector.h  XYVector.inl
script/: .Rapp.history  ENm008.CF.R  ENm008.CF.sh  ENm008.CF_10.R  ENm008.CF_10.Raw.R  ENm008.CF_10.sh  ENm008.ContactFrequency.R  ENm008.ContactFrequency.sh  ENm008.GetPropensityFromPick.R  ENm008.TriangleInequality.R  ENm008.aggregate.chain.sh  ENm008.aggregate.sh  ENm008.aggregate_2.sh  ENm008.aggregate_2.sub.sh  ENm008.chain.BoxplotWeightDist.R  ENm008.chain.BoxplotWeightDist_2.R  ENm008.chain.BoxplotWeightDist_2.sh  ENm008.chain.CallOverlap2.sh  ENm008.chain.ClusterPvalue.R  ENm008.chain.ClusterbyRMSD.R  ENm008.chain.Compare.global.R  ENm008.chain.Compare.local.R  ENm008.chain.Draw.DbscanCluster.R  ENm008.chain.Draw.PijPred.R  ENm008.chain.Draw.Venn.Overlap.Exp.Pred.py  ENm008.chain.FishDistance.R  ENm008.chain.GM.ini  ENm008.chain.GenerateAllCon.R  ENm008.chain.GenerateAllCon.sh  ENm008.chain.GetLocalContact.R  ENm008.chain.GetSignificant.R  ENm008.chain.GetSignificant.alpha.R  ENm008.chain.GetSignificant_2.R  ENm008.chain.GetWeightConnection.Count.R  ENm008.chain.GetWeightConnection.R  ENm008.chain.GetWeightDist.sh  ENm008.chain.GetWeightDist_2.sh  ENm008.chain.GetWeightDist_3.R  ENm008.chain.GetWeightDist_3.sh  ENm008.chain.K.ini  (+12 more)
script/data/ENm008/: .Rapp.history  Nature_2010_5CFrequencyCountsMatrix_ENm008_GM12878.txt  Nature_2010_5CResultAndModelAnalysis.txt  Nature_2010_ContactMap_ENm008_GM12878.txt  Nature_2010_ContactMap_ENm008_GM12878_BED.txt  Nature_2010_ContactMap_ENm008_K562.txt  Nature_2010_ContactMap_ENm008_K562_BED.txt  README.txt  extractStartEnd.sh  genMatrixFile.R
script/data/ENm008/circos/: cpgIslandExt_circos.txt  text.genes.txt  wgEncodeBroadChipSeqPeaksGm12878Ctcf_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k27ac_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k27me3_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k36me3_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k4me1_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k4me2_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k4me3_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H3k9ac_circos.txt  wgEncodeBroadChipSeqPeaksGm12878H4k20me1_circos.txt  wgEncodeBroadChipSeqPeaksK562Ctcf_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k27ac_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k36me3_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k4me1_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k4me2_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k4me3_circos.txt  wgEncodeBroadChipSeqPeaksK562H3k9ac_circos.txt  wgEncodeBroadChipSeqPeaksK562H4k20me1_circos.txt  wgEncodeCaltechRnaSeqRawSignalRep1Gm12878CellLongpolyaBb12x75_circos.txt  wgEncodeCaltechRnaSeqRawSignalRep1K562CellLongpolyaBb12x75_circos.txt  wgEncodeDukeDNaseSeqPeaksGm12878V3_circos.txt  wgEncodeDukeDNaseSeqPeaksK562V3_circos.txt  wgEncodeUncFAIREseqPeaksGm12878V3_circos.txt  wgEncodeUncFAIREseqPeaksK562V3_circos.txt  wgEncodeUtaChIPseqPeaksGm12878CtcfV3_circos.txt  wgEncodeUtaChIPseqPeaksK562CtcfV3_circos.txt  wgEncodeUwChIPSeqPeaksRep1Gm12878Ctcf_circos.txt  wgEncodeUwChIPSeqPeaksRep1Gm12878H3k27me3_circos.txt  wgEncodeUwChIPSeqPeaksRep1Gm12878H3k36me3_circos.txt  wgEncodeUwChIPSeqPeaksRep1Gm12878H3k4me3_circos.txt  wgEncodeUwChIPSeqPeaksRep1K562Ctcf_circos.txt  wgEncodeUwChIPSeqPeaksRep1K562H3k36me3_circos.txt  wgEncodeUwChIPSeqPeaksRep1K562H3k4me3_circos.txt  wgEncodeUwDnaseSeqPeaksRep1Gm12878_circos.txt  wgEncodeUwDnaseSeqPeaksRep1K562_circos.txt  wgEncodeUwDnaseSeqPeaksRep2Gm12878_circos.txt  wgEncodeUwDnaseSeqPeaksRep2K562_circos.txt
script/data/ENm008/hg18.chr16.alpha/: 1.fa  README  alpha.fa  run.sh
script/data/analysis/ENm008/: ENm008.p1500.equ.contact.point.ind.txt  ENm008.p1500.equ.seg.len.txt  ENm008.p1500.point.ind.pos.txt  GM12878.p1500.point.ind.count.txt  GM12878.p1500.pos.count.txt  GM12878.p1500_d3300.c840.a5.sis.node.dst  K562.p1500.point.ind.count.txt  K562.p1500.pos.count.txt  K562.p1500_d3300.c840.a5.sis.node.dst  nodenodelist.txt  (+1 more)
src/: CMakeLists.txt  chromatin.sis.coarse.cpp  ensemble.cpp  gen.uniform.samples.cpp  test.octree.cpp
test/: test.ENm008.ini  test.ensemble.ini  test.ini
test2/: .Rapp.history  .Rhistory  CalReduceRMS.py  CheckDistance.py  GenPDBFromPts.py  GenReducePdb.py  GetDstFromPts.R  InterpolateStructure.R  pymolmark.txt
test2/test/: AAA_0001.r270  AAA_0001.r270.05.a.overlap  AAA_0001.r270.05.a.overlap2  AAA_0001.r270.1.contrib  AAA_0001.r270.20.int  AAA_0001.r270.alf  AAA_0001.r270.corners  AAA_0001.r270.dt  AAA_0001.r270.info  AAA_0001.r270.warn  radii_table  test.sh
